fixed styling for burger menu on smaller devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -639,7 +639,7 @@ select {
     }
 
     .sidebar-element {
-        width: 25vw;
+        width: 45vw;
     }
 
     .bm-menu {
